# ZKP-chaum-pedersen-gRPC

./: Cargo.toml  README.md  build.rs
proto/: zkp.proto
src/: client.rs  crypto.rs  server.rs
src/chaum_pedersen/: crypto.rs  mod.rs
