[package]
name = "zkp-chaum-pedersen-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
num-integer = "0.1"

rand = "0.8"
sha2 = "0.10"

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "grpc-zkp-server"
path = "src/server.rs"

[[bin]]
name = "grpc-zkp-client"
path = "src/client.rs"